# stunning-potato

./: .dockerignore  .env  .gitignore  Dockerfile  TODO.md  database_migration.py  docker-compose.yml  docker.env  launch.py  pyproject.toml  temp.html  temp.js
downloader/: Dockerfile  downloader.py
gui/: .eslintrc  .prettierrc  package.json
gui/public/: index.html  manifest.json
gui/src/: App.js  AppRenderer.js
gui/src/assets/css/sass/: main.scss
gui/src/components/cards/: GradientWithRadialProgressCard.js  RadialProgressCard.js
gui/src/components/charts/: Radar.js
gui/src/components/common/: SliderTooltips.js
gui/src/constants/: defaultValues.js  menu.js
gui/src/containers/dashboards/: Calendar.js
gui/src/containers/navs/: Breadcrumb.js  Footer.js  Sidebar.js  Topnav.DarkSwitch.js  Topnav.js
gui/src/containers/pages/: ImageListView.js  ListPageListing.js
gui/src/containers/ui/: ReactTableCards.js
gui/src/data/: iconCards.js
gui/src/redux/: constants.js  reducers.js  store.js
gui/src/redux/actresses/: actions.js  reducer.js
gui/src/redux/films/: actions.js  reducer.js
gui/src/views/app/: index.js
gui/src/views/app/accueil/: index.js  start.js
gui/src/views/app/actrices/: actress_detail.js  index.js  start.js
gui/src/views/app/cinema/: index.js  player.js  start.js
gui/src/views/app/nouvelle/: index.js  start.js
gui/src/views/app/upload/: index.js  start.js
indexer/: Dockerfile  indexer.py
indexer/tests/: test_indexer.py
server/: Dockerfile  server.py
transcoder/: Dockerfile  transcoder.py
util/database/: database_access.py  drop.sql  populate.sql  tables.sql
util/database/tests/: test_database_connection.py  test_database_setup.py
util/metadataapi/: metadataapi.py
util/models/: actress.py  actress_detail.py  film.py  film_actress_rating.py  indexed.py  queue.py  rating.py
util/scraper/: detail_page.py  document.py  get_document.py  iframe_url_blacklist.json  list_page.py
util/scraper/tests/: ans-gen.py  answers.json  test_scraper.py
util/torrents/: __init__.py
